# pc-talent-plan

building-blocks/: Cargo.toml
building-blocks/src/: de.rs  error.rs  lib.rs  parse.rs  ping.rs  ser.rs
kvs/: Cargo.toml
kvs/src/: error.rs  io.rs  kv.rs  lib.rs
kvs/tests/: tests.rs
tp201-PNA/kvs/: Cargo.toml
tp201-PNA/kvs/src/: lib.rs
