[package]
name = "building-blocks"
version = "0.1.0"
authors = ["Frank de Jong <f.jin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.1.0"
nom = "6.1.0"
rand = "0.8.3"
ron = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
