[package]
name = "kvs"
version = "0.1.0"
authors = ["Frank de Jong <f.jin@protonmail.com>"]
description = "A simple key-value store."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
clap = "3.0.0-beta.2"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
simple_logger = "1.11.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.2"
walkdir = "2.3"

[lib]
