[package]
name = "kvs"
version = "0.1.0"
authors = ["Frank de Jong <f.jin@protonmail.com>"]
description = "A simple key-value store."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"

[lib]
doctest = false
